--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       }
     </style>
   </head>
+
   <body>
-    <nav class="container navbar navbar-expand-sm navbar-light bg-light">
+    <!-- <nav class="container navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,82 +38,147 @@
             <li class="nav-item">Careers</li>
           </ul>
 
-          <button>Request Invite</button>
+          <button class="mx-auto">Request Invite</button>
+        </div>
+      </div>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="./images/logo.svg" alt="" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
 
-    <section id="" class="container">
-      <div class="row">
-        <div class="col-sm">
-          <h1>Next generation digital banking</h1>
-          <p>Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
-        </div>
+    <section id="intro-section">
+      <div class="container">
+        <div id="intro-content-wrapper" class="col-sm">
+          <div id="header-image-div" class="col-sm">
+            <img id="image-mockups" src="./images/image-mockups.png" alt="" />
+          </div>
 
-        <div id="header-image-div" class="col-sm">
-          <img id="image-mockups" src="./images/image-mockups.png" alt="">
-        </div>
+          <div id="intro-text-div">
+            <h1 class="text-center text-sm-left">Next generation digital banking</h1>
+            <p class="text-center text-sm-left body-copy">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
+          </div>
 
-      </div>
-      <button>Request Invite</button>
-    </section>
-
-    <section class="container">
-      <div>
-        <h3>Why choose Easybank?</h3>
-
-        <p>We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-3">
-          <h5>Online Banking</h5>
-          <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
-        </div>
-
-        <div class="col-sm-3">
-          <h5>Simple Budgeting</h5>
-          <p>See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
-        </div>
-
-        <div class="col-sm-3">
-          <h5>Fast Onboarding</h5>
-          <p>We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
-        </div>
-
-        <div class="col-sm-3">
-          <h5>Open API</h5>
-          <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+          <div class="col-7 mx-auto">
+            <button>Request Invite</button>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="container">
-      <h3>Latest Articles</h3>
-
-      <div class="row">
-        <div class="col-sm-3">
-          By Claire Robinson
-          <h6>Receive money in any currency with no fees</h6>
-          <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+    <section id="services-section">
+      <div class="container">
+        <div>
+          <h2 class="text-center text-sm-left">Why choose Easybank?</h2>
+          <p class="text-center text-sm-left body-copy">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
         </div>
 
-        <div class="col-sm-3">
-          By Wilson Hutton
-          <h6>Treat yourself without worrying about money</h6>
-          <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
-        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="text-center text-sm-left">
+              <img src="./images/icon-online.svg" class="icon" alt="" />
+            </div>
+            <h5 class="text-center text-sm-left">Online Banking</h5>
+            <p class="text-center text-sm-left body-copy">Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
+          </div>
 
-        <div class="col-sm-3">
-          By Wilson Hutton
-          <h6>Take your Easybank card wherever you go</h6>
-          <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
-        </div>
+          <div class="col-sm-3">
+            <div class="text-center text-sm-left">
+              <img src="./images/icon-budgeting.svg" class="icon" alt="" />
+            </div>
+            <h5 class="text-center text-sm-left">Simple Budgeting</h5>
+            <p class="text-center text-sm-left body-copy">See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
+          </div>
 
-        <div class="col-sm-3">
-          By Claire Robinson
-          <h6>Our invite-only Beta accounts are now live!</h6>
-          <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+          <div class="col-sm-3">
+            <div class="text-center text-sm-left">
+              <img src="./images/icon-onboarding.svg" class="icon" alt="" />
+            </div>
+            <h5 class="text-center text-sm-left">Fast Onboarding</h5>
+            <p class="text-center text-sm-left body-copy">We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
+          </div>
+
+          <div class="col-sm-3">
+            <div class="text-center text-sm-left">
+              <img src="./images/icon-api.svg" class="icon" alt="" />
+            </div>
+            <h5 class="text-center text-sm-left">Open API</h5>
+            <p class="text-center text-sm-left body-copy">Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="articles-section">
+      <div class="container">
+        <h2 class="text-center text-sm-left">Latest Articles</h2>
+
+        <div class="row">
+          <div class="col-sm-3 featured-article-div">
+            <div class="article-image-div">
+              <img src="./images/image-currency.jpg" alt="" />
+            </div>
+
+            <div class="article-text-div">
+              <p class="author">By Claire Robinson</p>
+              <h6>Receive money in any currency with no fees</h6>
+              <p class="body-copy">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+            </div>
+          </div>
+
+          <div class="col-sm-3 featured-article-div">
+            <div class="article-image-div">
+              <img src="./images/image-restaurant.jpg" alt="" />
+            </div>
+            <div class="article-text-div">
+              <p class="author">By Wilson Hutton</p>
+              <h6>Treat yourself without worrying about money</h6>
+              <p class="body-copy">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+            </div>
+          </div>
+
+          <div class="col-sm-3 featured-article-div">
+            <div class="article-image-div">
+              <img src="./images/image-plane.jpg" alt="" />
+            </div>
+            <div class="article-text-div">
+              <p class="author">By Wilson Hutton</p>
+              <h6>Take your Easybank card wherever you go</h6>
+              <p class="body-copy">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+            </div>
+          </div>
+
+          <div class="col-sm-3 featured-article-div">
+            <div class="article-image-div">
+              <img src="./images/image-confetti.jpg" alt="" />
+            </div>
+            <div class="article-text-div">
+              <p class="author">By Claire Robinson</p>
+              <h6>Our invite-only Beta accounts are now live!</h6>
+              <p class="body-copy">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
